# vrs-pydantic

./: .flake8  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: github-actions.yml  release.yml
src/ga4gh/models/: __init__.py  vrs_model.py  vrsatile_model.py
src/ga4gh/vrsatile/pydantic/: __init__.py  core_models.py  version.py  vrs_model.py  vrs_models.py  vrsatile_model.py  vrsatile_models.py
tests/: conftest.py  test_core_models.py  test_version.py  test_vrs_model.py  test_vrs_models.py  test_vrsatile.py  test_vrsatile_model.py  test_vrsatile_models.py
