# See here:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
# https://github.com/pyscaffold/pyscaffold/blob/master/setup.cfg

[metadata]
name = ga4gh.models
home-page = https://github.com/ga4gh/vrs-pydantic
long-description = file:README.rst
long-description-content-type = text/x-rst; charset=UTF-8
description = "Translation of the GA4GH VRS and VRSATILE Schemas to a Pydantic data model"
#description-content-type = text/x-rst; charset=UTF-8
license-file = LICENSE
author = Alex H. Wagner
author-email = alex.wagner@nationwidechildrens.org


classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
keywords =
    bioinformatics
    ga4gh
    genomics
    hgvs
    spdi
    variation


[options]
packages = find_namespace:
include_package_data = True
python_requires = >= 3.6
zip_safe = True
package_dir =
    = src
install_requires =
    pydantic
tests_require =
    pytest
    pytest-cov

[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc


# Jedi pinned https://github.com/ipython/ipython/issues/12677#issuecomment-752258403
[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    flake8-docstrings
    pre-commit
    coveralls
    coverage

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
max-line-length = 120
exclude = tests/*
max-complexity = 10
ignore = E129,E221,E241,E251,E303,W291

[tool:pytest]
addopts = --ignore setup.py --doctest-modules --cov-report term-missing --cov .